--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Flora</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.4-web/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="#">
-                <img src="./img/logo.png" alt="">
+            <a href="/">
+                <img src="/img/logo.png" alt="">
             </a>
 
         </div>
         <div class="menu">
             <ul class="sub-menu">
                 <li>
-                    <a href="">MAKE UP</a>
+                    <a href="/cartelogy">MAKE UP</a>
                     <ul class="sub-menu-2">
                         <li>
                             <ul class="sub-menu-3">
@@ -75,7 +76,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="">SKIN CARE</a>
+                    <a href="/cartelogy">SKIN CARE</a>
                     <ul class="sub-menu-2">
                         <li>
                             <ul class="sub-menu-3">
@@ -240,8 +241,8 @@
     <section class="app-container">
         <p>DOWNLOAD APP FLORA</p>
         <div class="app-download">
-            <img src="./img/appstore.jpg" alt="">
-            <img src="./img/googleplay.jpg" alt="">
+            <img src="/img/appstore.jpg" alt="">
+            <img src="/img/googleplay.jpg" alt="">
         </div>
         <p>NEWS FROM FLORA</p>
         <div class="input-email">
@@ -253,7 +254,7 @@
     <footer>
         <div class="footer-top">
             <li>
-                <a href=""><img src="./img/notified.jpg" alt="" srcset=""></a>
+                <a href=""><img src="/img/notified.jpg" alt="" srcset=""></a>
             </li>
             <li>
                 <a href="">HOTLINE</a>
@@ -278,6 +279,9 @@
             ©Flora All rights reserved
         </div>
     </footer>
-    <script src="./js/app.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
