--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -226,10 +226,10 @@
                     <i class="fa fa-paw"></i>
                 </li>
                 <li>
-                    <i class="fa fa-user"></i>
+                    <a href="login"><i class="fa fa-user"></i></a>
                 </li>
                 <li>
-                    <i class="fa fa-shopping-bag"></i>
+                    <a href="cart"><i class="fa fa-shopping-bag"></i></a>
                 </li>
             </ul>
         </div>
