fix file login vs signup

--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -20,7 +20,7 @@
         <div class="menu">
             <ul class="sub-menu">
                 <li>
-                    <a href="/cartelogy">MAKE UP</a>
+                    <a href="/cartegory">MAKE UP</a>
                     <ul class="sub-menu-2">
                         <li>
                             <ul class="sub-menu-3">
@@ -76,7 +76,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="/cartelogy">SKIN CARE</a>
+                    <a href="/cartegory">SKIN CARE</a>
                     <ul class="sub-menu-2">
                         <li>
                             <ul class="sub-menu-3">
