--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -5,7 +5,7 @@
 <h4 class="card-title mb-4 mt-1">Sign in</h4>
       <form>
         <div class="form-group">
-          <label>Your email</label>
+          <label>username</label>
           <input id="username" class="form-control" type="text" placeholder="User Name" />
         </div>
         <div class="form-group">
