--- a/src/resources/views/cartegory.hbs
+++ b/src/resources/views/cartegory.hbs
@@ -25,20 +25,20 @@
                             <li>
                                 <a href="#">LIPSTICK</a>
                                 <ul class="sub-category">
+                                    {{!-- <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
+                                    <li><a href="#">##########</a></li> --}}
                                 </ul>
                             </li>
                             <li>
                                 <a href="#">CUSHION</a>
                                 <ul class="sub-category">
+                                    {{!-- <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
-                                    <li><a href="#">Q##########</a></li>
+                                    <li><a href="#">Q##########</a></li> --}}
                                 </ul>
 
 
@@ -46,22 +46,22 @@
                             <li>
                                 <a href="#">POWDER</a>
                                 <ul class="sub-category">
+                                    {{!-- <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
+                                    <li><a href="#">##########</a></li> --}}
                                 </ul>
 
                             </li>
                             <li>
                                 <ul class="sub-category">
+                                    {{!-- <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
                                     <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
-                                    <li><a href="#">##########</a></li>
+                                    <li><a href="#">##########</a></li> --}}
                                 </ul>
 
                             </li>
