--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -197,22 +197,7 @@
                 </li>
                 <li>
                     <a href="">INFORMATION</a>
-                    <ul class="sub-menu-2">
-                        <li>
-                            <ul class="sub-menu-3">
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                                <li><a href="">###############</a></li>
-                            </ul>
-                        </li>
 
-                    </ul>
                 </li>
             </ul>
         </div>
@@ -226,10 +211,10 @@
                     <i class="fa fa-paw"></i>
                 </li>
                 <li>
-                    <a href="login"><i class="fa fa-user"></i></a>
+                    <a href="/login"><i class="fa fa-user"></i></a>
                 </li>
                 <li>
-                    <a href="cart"><i class="fa fa-shopping-bag"></i></a>
+                    <a href="/cart"><i class="fa fa-shopping-bag"></i></a>
                 </li>
             </ul>
         </div>
