--- a/src/resources/views/create.hbs
+++ b/src/resources/views/create.hbs
@@ -1,6 +1,6 @@
 <div class="mt-4">
     <h3 style="margin: 100px 0px 10px 200px">POST PRODUCT</h3>
-    <form method="post" action="store" style="margin: 10px 200px 100px 200px;">
+    <form method="POST" action="store" style="margin: 10px 200px 100px 200px;">
         <div class="form-group">
             <label for="MSP">MSP</label>
             <input type="text" class="form-control" id="MSP" name="MSP">
