--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -2,22 +2,18 @@
 <div class="card" style="margin: 100px 300px 100px 300px;">
 <article class="card-body">
 <a href="signup" class="float-right btn btn-outline-primary">Sign up</a>
-<h4 class="card-title mb-4 mt-1">Sign in</h4>
-      <form>
-        <div class="form-group">
-          <label>username</label>
-          <input id="username" class="form-control" type="text" placeholder="User Name" />
-        </div>
+<h4 class="card-title mb-4 mt-1">Login</h4>
+      <form method="POST" action="letlogin">
         <div class="form-group">
           <label>Your Email</label>
-          <input id="email" class="form-control" type="text" placeholder="Email" />
+          <input id="email" name="email" class="form-control" placeholder="Email" />
         </div>
         <div class="form-group">
           <label>Your Password</label>
-          <input id="password" class="form-control" type="password" placeholder="Password" />
+          <input id="password" name="password" class="form-control" type="password" placeholder="Password" />
         </div>
-        <button class="btn-login">Sign in</button>
+        <button class="btn-login" type="submit">Login</button>
       </form>
 </article>
 </div>
-<script src="/js/login.js"></script>
+{{!-- <script src="/js/login.js"></script> --}}
