--- a/src/resources/views/signup.hbs
+++ b/src/resources/views/signup.hbs
@@ -1,30 +1,28 @@
 
 <div class="card" style="margin: 100px 300px 100px 300px;">
 <article class="card-body">
-<a href="login" class="float-right btn btn-outline-primary">Sign in</a>
+<a href="login" class="float-right btn btn-outline-primary">Login</a>
 <h4 class="card-title mb-4 mt-1">Sign up</h4>
-      <form>
+      <form method="POST" action="useradd">
         <div class="form-group">
           <label>User Name</label>
-          <input id="username" class="form-control" type="text" placeholder="User Name" />
+          <input id="username" name="username" class="form-control" placeholder="User Name" />
         </div>
 
         <div class="form-group">
           <label>Your email</label>
-          <input id="email" class="form-control" type="text" placeholder="Email" />
+          <input id="email" name="email" class="form-control" placeholder="Email" />
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input id="password" class="form-control" type="password" placeholder="Password" />
+          <input id="password" name="password" type="password" class="form-control" placeholder="Password" />
         </div>
         <div class="form-group">
           <label>Confirm Password</label>
-          <input id="password" class="form-control" type="password" placeholder="Confirm Password" />
+          <input id="confirmpassword" name="confirmpassword" type="password" class="form-control" placeholder="Confirm Password" />
         </div>
-        <button class="btn-signup">Sign Up</button>
+        <button class="btn-signup"  type="submit">Sign Up</button>
       </form>
-    </div>                                                        
-</form>
 </article>
 </div>
-<script src="/js/signup.js"></script>
+{{!-- <script src="/js/signup.js"></script> --}}
