--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -222,23 +222,26 @@
 
     {{{body}}}
 
+    <!-- Footer -->
 <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
-    <div id="fb-customer-chat" class="fb-customerchat"></div>
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "PAGE-ID");
+      chatbox.setAttribute("page_id", "111020471991606");
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
-
+    <!-- Your SDK code -->
     <script>
       window.fbAsyncInit = function() {
         FB.init({
           xfbml            : true,
-          version          : 'API-VERSION'
+          version          : 'v17.0'
         });
       };
 
@@ -249,9 +252,8 @@
         js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
-    </script>    
-    <!-- Footer -->
-
+    </script>
+    
     <section class="app-container">
         <p>DOWNLOAD APP FLORA</p>
         <div class="app-download">
